--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -73,6 +73,22 @@ header h1{
 span{
     color: var(--color-font3);
 }
+/*MENU HAMBURGUER*/
+.hamburguer{
+cursor: pointer;
+position: relative;
+z-index: 2;
+display: none;
+}
+.barra{
+    display: block;
+    width: 3rem;
+    height: .3rem;
+    background: var(--color-font1);
+    margin: .5rem auto;
+    border-radius: 5px;
+    transition: .5s;
+}
 #titulo{
     display: flex;
     justify-content: center;
@@ -80,16 +96,39 @@ span{
 }
 /*RESPONSIVIDADE*/
 
-@media(width <=700px){
+@media(width <=1024px){
+
     .header-menu{
         width: 100%;
-        display: flex;
+        height: 100vh;
+        background: var(--gradient);
+        position: absolute;
+        z-index: 1;
+        top:0;
+        left: -100%;
+        gap:4rem;
+        text-align: center;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        transition: .5s;
     }
     #titulo{
         font-size: 2rem;
     }
-    
+    .active{
+        left:0;
+    }
+    .hamburguer{
+        display: block;
+    }
+
+    .hamburguer.active .barra:first-child{
+        transform: translateY(8px) rotate(360deg) rotate(45deg);
+    }
+    .hamburguer.active .barra:nth-child(2){
+        opacity: 0;
+    }
+    .hamburguer.active .barra:last-child{
+        transform: translateY(-8px) rotate(-360deg) rotate(-45deg);
+    }
 }
